Fixed minor border bottom spacing in MyDiningHistory component

--- a/react-app/src/components/Reservations/MyDiningHistory.css
+++ b/react-app/src/components/Reservations/MyDiningHistory.css
@@ -173,7 +173,7 @@
 .dining-dashboard-under-points-border-bottom-line {
     border-bottom: solid;
     border-color: rgb(231, 230, 230);
-    height: 12px;
+    height: 20px;
     border-width: thin;
 }
 
